added all html pages and started flexbox layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Woodland Priorities Tool</title>
 </head>
+
 <body>
+
+    <header>
+
+        <div>Logo</div>
+
+        <ul>Nav</ul>
+
+    </header>
+
+
+    <main>
     
+    <div>
+
+        <h1>Woodland Priorities Tool</h1>
+
+    </div>
+
+    <div>
+
+        <h2>Select the priority aim for your woodland</h2>
+
+    </div>
+
+    <div>
+        <img src="" alt="">
+    </div>
+
+    <div>
+        <img src="" alt="">
+    </div>
+
+    <div>
+        <img src="" alt="">
+    </div>
+
+    <div>
+        <h2>About</h2>
+        <p>About text</p>
+    </div>
+
+    </main>
+
+
+    <footer>
+
+        <p>Copyright</p>
+
+    </footer>
+
 </body>
+
 </html>
