home layout complete, header done, started content

--- a/index.html
+++ b/index.html
@@ -5,48 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Woodland Priorities Tool</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
     <header>
 
-        <div>Logo</div>
+        <div class="logo">
+            <img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+        </div>
 
-        <ul>Nav</ul>
+        <div class="nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        </div>
 
     </header>
 
 
     <main>
     
-    <div>
+    <div class="banner">
 
         <h1>Woodland Priorities Tool</h1>
 
     </div>
 
-    <div>
+    <div class="subheading">
 
         <h2>Select the priority aim for your woodland</h2>
 
     </div>
 
-    <div>
-        <img src="" alt="">
+    <div class="home-images">
+
+        <img src="images/home-biodiversity.jpg" alt="Nightingale singing" width="300px">
+
+        <img src="images/home-climate.png" alt="Tree canopy from below" width="300px">
+ 
+        <img src="images/home-wellbeing.jpeg" alt="People in the woods" width="300px">
+
     </div>
 
-    <div>
-        <img src="" alt="">
-    </div>
+    <div class="about">
 
-    <div>
-        <img src="" alt="">
-    </div>
-
-    <div>
         <h2>About</h2>
-        <p>About text</p>
+        <p>This tool allows for land managers and practitioners to explore the management options for their woodland.
+            Select a priority aim for your woodland and find out how you can maximise the benefits of woodland
+            for your chosen aim. This tool is for guidance only and there are certainly many more possible aims for
+            woodland management. The information provided here is designed to be a starting point for making decisions
+            on habitat management that will maximise the potential of your woodland.
+        </p>
+
     </div>
 
     </main>
@@ -54,7 +68,11 @@
 
     <footer>
 
+    <div class="copyright">
+
         <p>Copyright</p>
+
+    </div>
 
     </footer>
 
