--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header>
 
         <div class="logo">
-            <img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+                </a>
         </div>
 
         <div class="nav">
@@ -41,19 +42,32 @@
 
     </div>
 
-    <div class="home-images">
+    <hr>
 
-        <img src="images/home-biodiversity.jpg" alt="Nightingale singing" width="300px">
+    <div class="priority-button-container">
 
-        <img src="images/home-climate.png" alt="Tree canopy from below" width="300px">
- 
-        <img src="images/home-wellbeing.jpeg" alt="People in the woods" width="300px">
+        <a class="priority-button" href="biodiversity.html">
+            <span>Biodiversity Conservation</span> 
+            <img src="images/biodiversity-icon.png" alt="An image representing biodiversity">
+        </a>
+        <a class="priority-button" href="climate.html">
+            <span>Climate Change Mitigation</span>
+            <img src="images/climate-icon.png" alt="An image representing biodiversity">
+        </a>
+        <a class="priority-button" href="wellbeing.html">
+            <span>Community Engagement</span>
+            <img src="images/wellbeing-icon.png" alt="An image representing biodiversity">
+        </a>
+
 
     </div>
+    
+    <div class="about-section">
 
     <div class="about">
 
         <h2>About</h2>
+
         <p>This tool allows for land managers and practitioners to explore the management options for their woodland.
             Select a priority aim for your woodland and find out how you can maximise the benefits of woodland
             for your chosen aim. This tool is for guidance only and there are certainly many more possible aims for
@@ -63,6 +77,15 @@
 
     </div>
 
+    <div class="about-image">
+
+    <img class="image" src="images/about-image.jpg" alt="Image of a coppice woodland" width="450px">
+
+   </div>
+
+   </div>
+
+
     </main>
 
 
@@ -70,11 +93,11 @@
 
     <div class="copyright">
 
-        <p>Copyright</p>
+        <p class="copyright">&#169 Catherine Walker 2025</p>
 
     </div>
 
-    </footer>
+</footer>
 
 </body>
 
