--- a/biodiversity.html
+++ b/biodiversity.html
@@ -11,7 +11,8 @@
     <header>
 
         <div class="logo">
-            <img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+                </a>
         </div>
 
         <div class="nav">
