--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-        <header>
+    
+    <header>
 
         <div class="logo">
-            <img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+                </a>
         </div>
 
         <div class="nav">
@@ -22,5 +24,6 @@
         </div>
 
     </header>
+    
 </body>
 </html>
