--- a/wellbeing.html
+++ b/wellbeing.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-        <header>
+<header>
 
         <div class="logo">
-            <img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+                </a>
         </div>
 
         <div class="nav">
