all web pages now set up and linked together with content being added

--- a/biodiversity.html
+++ b/biodiversity.html
@@ -16,14 +16,48 @@
         </div>
 
         <div class="nav">
-        <ul>
+        <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
 
+
     </header>
+
+    <div class="priority-button-container">
+
+        <p class="priority-button current">
+            <span>Biodiversity Conservation</span> 
+            <img src="images/biodiversity-icon.png" alt="An image representing biodiversity">
+        </p>
+        <a class="priority-button" href="climate.html">
+            <span>Climate Change Mitigation</span>
+            <img src="images/climate-icon.png" alt="An image representing biodiversity">
+        </a>
+        <a class="priority-button" href="wellbeing.html">
+            <span>Community Engagement</span>
+            <img src="images/wellbeing-icon.png" alt="An image representing biodiversity">
+        </a>
+
+
+    </div>
+
+
+    <div>
+        
+    </div>
+
+    <footer>
+
+    <div class="copyright">
+
+        <p class="copyright">&#169 Catherine Walker 2025</p>
+
+    </div>
+
+    </footer>
     
 </body>
 </html>
