--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
     <header>
 
         <div class="logo">
@@ -16,14 +16,42 @@
         </div>
 
         <div class="nav">
-        <ul>
+        <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
 
     </header>
+
+    <div class="banner banner-contact">
+        <h1>Ask a Question</h1>
+    </div>
+    <div class="form-container">
+    <div class="contact-form">
+    <form action="">
+        <label for="fname">First Name:</label>
+            <input type="text" name="fname"><br>
+            <label for="lname">Last Name:</label>
+            <input type="text" name="lname"><br>
+            <label for="email">Email:</label>
+            <input type="text" name="email"><br>
+            <label for="message">Message:</label><br>
+            <textarea name="message" ></textarea><br>
+            <input class="submit" type="submit" value="Submit">
+    </form>
+    </div>
+    </div>
+    <footer>
+
+    <div class="copyright">
+
+        <p class="copyright">&#169 Catherine Walker 2025</p>
+
+    </div>
+
+    </footer>
     
 </body>
 </html>
