--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
 
         <div class="nav">
-        <ul>
+        <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
@@ -30,9 +30,9 @@
 
     <main>
     
-    <div class="banner">
+    <div class="banner banner-home">
 
-        <h1>Woodland Priorities Tool</h1>
+        <h1>Woodland Priorities Explorer</h1>
 
     </div>
 
@@ -66,13 +66,13 @@
 
     <div class="about">
 
-        <h2>About</h2>
+        <h2>About this Tool</h2>
 
         <p>This tool allows for land managers and practitioners to explore the management options for their woodland.
-            Select a priority aim for your woodland and find out how you can maximise the benefits of woodland
+            Select a priority aim for your woodland and find out how you can maximise the benefits of your woodland
             for your chosen aim. This tool is for guidance only and there are certainly many more possible aims for
             woodland management. The information provided here is designed to be a starting point for making decisions
-            on habitat management that will maximise the potential of your woodland.
+            on habitat management that will help your woodland reach its potential.
         </p>
 
     </div>
@@ -97,7 +97,7 @@
 
     </div>
 
-</footer>
+    </footer>
 
 </body>
 
