--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
     <header>
 
         <div class="logo">
@@ -16,14 +16,52 @@
         </div>
 
         <div class="nav">
-        <ul>
+        <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
 
     </header>
-    
+
+
+    <div class="banner banner-about">
+        <h1>About Us</h1>
+    </div>
+
+    <div>
+        <p>
+            Tree Tools develop novel solutions to challenges in the field of forest ecology. Ideal
+            ideal for land managers and practitioners, these tools increase efficiency and streamline the
+            process of managing treescapes. 
+        </p>
+        <ul class="about-section nav-list">
+            <span class="tools">Tools include:</span>
+            <li>Forestry biomass calculator</li>
+            <li>Woodland priority decision tool</li>
+            <li>Biodiversity data visualisation platform</li>
+            <li>Woodland community engagement social network</li>
+        </ul>
+    </div>
+
+
+    <div class="about-us-images">
+        <img class="about-image" src="images/climate-icon.png" alt="Icons representing climate">
+        <img class="about-image" src="images/biodiversity-icon.png" alt="Icons representing biodiversity">
+        <img class="about-image" src="images/wellbeing-icon.png" alt="Icons representing community engagement">
+    </div>
+
+
+    <footer>
+
+    <div class="copyright">
+
+        <p class="copyright">&#169 Catherine Walker 2025</p>
+
+    </div>
+
+    </footer>
+
 </body>
 </html>
