--- a/wellbeing.html
+++ b/wellbeing.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<header>
+    <header>
 
         <div class="logo">
             <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
@@ -16,14 +16,45 @@
         </div>
 
         <div class="nav">
-        <ul>
+        <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
 
     </header>
+
+    <div class="priority-button-container">
+
+        <a class="priority-button" href="biodiversity.html">
+            <span>Biodiversity Conservation</span> 
+            <img src="images/biodiversity-icon.png" alt="An image representing biodiversity">
+        </a>
+        <a class="priority-button" href="climate.html">
+            <span>Climate Change Mitigation</span>
+            <img src="images/climate-icon.png" alt="An image representing biodiversity">
+        </a>
+        <p class="priority-button current">
+            <span>Community Engagement</span>
+            <img src="images/wellbeing-icon.png" alt="An image representing biodiversity">
+        </p>
+
+
+    </div>
     
+    <div>
+    </div>
+
+    <footer>
+
+    <div class="copyright">
+
+        <p class="copyright">&#169 Catherine Walker 2025</p>
+
+    </div>
+
+    </footer>
+
 </body>
 </html>
