completed form, biodiversity, climate and wellbeing pages

--- a/about.html
+++ b/about.html
@@ -30,14 +30,14 @@
         <h1>About Us</h1>
     </div>
 
-    <div>
+    <div class=about-us-container>
         <p>
             Tree Tools develop novel solutions to challenges in the field of forest ecology. Ideal
             ideal for land managers and practitioners, these tools increase efficiency and streamline the
             process of managing treescapes. 
         </p>
-        <ul class="about-section nav-list">
-            <span class="tools">Tools include:</span>
+        <ul class="about-list">
+            <span><strong>Tools include:</strong></span>
             <li>Forestry biomass calculator</li>
             <li>Woodland priority decision tool</li>
             <li>Biodiversity data visualisation platform</li>
@@ -50,6 +50,7 @@
         <img class="about-image" src="images/climate-icon.png" alt="Icons representing climate">
         <img class="about-image" src="images/biodiversity-icon.png" alt="Icons representing biodiversity">
         <img class="about-image" src="images/wellbeing-icon.png" alt="Icons representing community engagement">
+
     </div>
 
 
