--- a/climate.html
+++ b/climate.html
@@ -43,8 +43,36 @@
 
     </div>
 
-    <div>
- 
+     <div class="page-container">
+
+    <div class="page-text">
+
+        <p>While leaving woodlands unmanaged can appear beneficial 
+            for climate mitigation, long-term non-management may reduce woodland 
+            resilience and carbon stability.</p>
+
+        <p>Dense, shaded canopies with limited age and structural diversity 
+            can make woodlands more vulnerable to disease, storm damage, and climate stress.</p>
+
+        <p>Traditional practices like coppicing, when carried out sensitively, 
+            maintain continuous tree cover and healthy soils while supporting vigorous regrowth 
+            and sustained carbon capture.</p>
+
+        <p>In a fragmented UK landscape, actively managed woodlands are often better able to adapt to 
+            changing conditions, as varied structure and species composition reduce the risk of 
+            large-scale failure.</p>
+
+        <p>Protecting ancient woodland soils while avoiding excessive shading 
+            helps balance carbon storage with ecological resilience.</p>
+
+        
+    </div>
+
+    <div class="page-images">
+        <img class=page-image src="/images/lime.jpg" alt="Image of lime leaves">
+        <p class=page-image-cap>Having a variety of different tree species is good under climate change.</p>
+        
+    </div>
     </div>
 
     <footer>
