--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,14 @@
     <div class="form-container">
     <div class="contact-form">
     <form action="">
-        <label for="fname">First Name:</label>
+            <label for="fname">First Name</label>
             <input type="text" name="fname"><br>
-            <label for="lname">Last Name:</label>
+            <label for="lname">Last Name</label>
             <input type="text" name="lname"><br>
-            <label for="email">Email:</label>
+            <label for="email">Email</label>
             <input type="text" name="email"><br>
-            <label for="message">Message:</label><br>
-            <textarea name="message" ></textarea><br>
+            <label for="message">Message</label><br>
+            <textarea name="message" rows="6"></textarea><br>
             <input class="submit" type="submit" value="Submit">
     </form>
     </div>
