fixed links to images

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header>
 
         <div class="logo">
-            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="./images/tt-logo.png" alt="Tree Tools Logo" width="200px">
                 </a>
         </div>
 
@@ -47,9 +47,9 @@
 
 
     <div class="about-us-images">
-        <img class="about-image" src="images/climate-icon.png" alt="Icons representing climate">
-        <img class="about-image" src="images/biodiversity-icon.png" alt="Icons representing biodiversity">
-        <img class="about-image" src="images/wellbeing-icon.png" alt="Icons representing community engagement">
+        <img class="about-image" src="./images/climate-icon.png" alt="Icons representing climate">
+        <img class="about-image" src="./images/biodiversity-icon.png" alt="Icons representing biodiversity">
+        <img class="about-image" src="./images/wellbeing-icon.png" alt="Icons representing community engagement">
 
     </div>
 
