--- a/biodiversity.html
+++ b/biodiversity.html
@@ -30,15 +30,15 @@
 
         <p class="priority-button current">
             <span>Biodiversity Conservation</span> 
-            <img src="images/biodiversity-icon.png" alt="An image representing biodiversity">
+            <img src="./images/biodiversity-icon.png" alt="An image representing biodiversity">
         </p>
         <a class="priority-button" href="climate.html">
             <span>Climate Change Mitigation</span>
-            <img src="images/climate-icon.png" alt="An image representing biodiversity">
+            <img src="./images/climate-icon.png" alt="An image representing biodiversity">
         </a>
         <a class="priority-button" href="wellbeing.html">
             <span>Community Engagement</span>
-            <img src="images/wellbeing-icon.png" alt="An image representing biodiversity">
+            <img src="./images/wellbeing-icon.png" alt="An image representing biodiversity">
         </a>
 
 
@@ -70,7 +70,7 @@
     </div>
 
     <div class="page-images">
-        <img class=page-image src="/images/coppice-stools.jpg" alt="Image of recently cut coppice stools">
+        <img class=page-image src="./images/coppice-stools.jpg" alt="Image of recently cut coppice stools">
         <p class=page-image-cap>Coppicing woodland is beneficial for biodiversity</p>
         
     </div>
