--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <header>
 
         <div class="logo">
-            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="./images/tt-logo.png" alt="Tree Tools Logo" width="200px">
                 </a>
         </div>
 
