--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
 
         <div class="logo">
-            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="./images/tt-logo.png" alt="Tree Tools Logo" width="200px">
                 </a>
         </div>
 
@@ -48,15 +48,15 @@
 
         <a class="priority-button" href="biodiversity.html">
             <span>Biodiversity Conservation</span> 
-            <img src="images/biodiversity-icon.png" alt="An image representing biodiversity">
+            <img src="./images/biodiversity-icon.png" alt="An image representing biodiversity">
         </a>
         <a class="priority-button" href="climate.html">
             <span>Climate Change Mitigation</span>
-            <img src="images/climate-icon.png" alt="An image representing biodiversity">
+            <img src="./images/climate-icon.png" alt="An image representing biodiversity">
         </a>
         <a class="priority-button" href="wellbeing.html">
             <span>Community Engagement</span>
-            <img src="images/wellbeing-icon.png" alt="An image representing biodiversity">
+            <img src="./images/wellbeing-icon.png" alt="An image representing biodiversity">
         </a>
 
 
@@ -79,7 +79,7 @@
 
     <div class="about-image">
 
-    <img class="image" src="images/about-image.jpg" alt="Image of a coppice woodland" width="450px">
+    <img class="image" src="./images/about-image.jpg" alt="Image of a coppice woodland" width="450px">
 
    </div>
 
