--- a/wellbeing.html
+++ b/wellbeing.html
@@ -11,7 +11,7 @@
     <header>
 
         <div class="logo">
-            <a href="index.html"><img src="/images/tt-logo.png" alt="Tree Tools Logo" width="200px">
+            <a href="index.html"><img src="./images/tt-logo.png" alt="Tree Tools Logo" width="200px">
                 </a>
         </div>
 
@@ -29,15 +29,15 @@
 
         <a class="priority-button" href="biodiversity.html">
             <span>Biodiversity Conservation</span> 
-            <img src="images/biodiversity-icon.png" alt="An image representing biodiversity">
+            <img src="./images/biodiversity-icon.png" alt="An image representing biodiversity">
         </a>
         <a class="priority-button" href="climate.html">
             <span>Climate Change Mitigation</span>
-            <img src="images/climate-icon.png" alt="An image representing biodiversity">
+            <img src="./images/climate-icon.png" alt="An image representing biodiversity">
         </a>
         <p class="priority-button current">
             <span>Community Engagement</span>
-            <img src="images/wellbeing-icon.png" alt="An image representing biodiversity">
+            <img src="./images/wellbeing-icon.png" alt="An image representing biodiversity">
         </p>
 
 
@@ -69,7 +69,7 @@
     </div>
 
     <div class="page-images">
-        <img class=page-image src="/images/bat-walk.jpg" alt="Image of lime leaves">
+        <img class=page-image src="./images/bat-walk.jpg" alt="Image of lime leaves">
         <p class=page-image-cap>Spending time in woodland is great for wellbeing.</p>
         
     </div>
